--- a/index.html
+++ b/index.html
@@ -7,47 +7,37 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> 
     <title>Avis Resto</title>
-
 </head>
 
 <body>
     <div id="logo">
-        <img src="./img/Logo.png" alt="logo Avis Resto" width="250px">
+        <img :src="logo" />
     </div>
 
     <div id="alignement">
         <div id="row">
-    <div id="align"> <div id="app">
+        <div id="app">
         </div>
         <div id="app1">
         </div>
-    </div>
-    <div id="align2">
         <div id="app2">
         </div>
         <div id="app3">
         </div>
-    </div>
-    <div id="align3">
         <div id="app4">
         </div>
         <div id="app5">
         </div>
-    </div>
-    <div id="align4">
         <div id="app6">
         </div>
         <div id="app7">
         </div>
-    </div>
-    <div id="align5">
         <div id="app8">
         </div>
         <div id="app9">
         </div>
-    </div>
         </div>
         <div id="map">
         </div>
